[tool.poetry]
name = "pico-to-mqtt"
version = "0.1.0"
description = "emit mqtt messages for Lutron Caseta Pico remotes"
authors = ["Dan Kulla <dan@dankulla.com>"]
readme = "README.md"
packages = [{ include = "pico_to_mqtt", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pylutron-caseta = { extras = ["cli"], version = "^0.18.3" }


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.332"
ruff = "^0.1.1"

[tool.pytest.ini_options]
pythonpath = ["src"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
