[tool.poetry]
name = "pico-to-mqtt"
version = "0.1.0"
description = "emit mqtt messages for Lutron Caseta Pico remotes"
authors = ["Dan Kulla <dan@dankulla.com>"]
readme = "README.md"
packages = [{ include = "pico_to_mqtt", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pylutron-caseta = "^0.18.3"
attrs = "^23.1.0"
typed-settings = {version = "^23.1.0", extras = ["attrs", "cattrs"]}
aiomqtt = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pyright = "^1.1.344"
pytest-mock = "^3.12.0"
pylutron-caseta = { extras = ["cli"], version = "^0.18.3" }

[tool.pyright]
ignore = ["typings"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
